<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.psu.hack.rollodex.ui.UserContactActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="37dp">

            <!-- First Name-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inFirstName"
                    android:id="@+id/inFirstName" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/fName"
                    android:layout_weight="0.78"
                    android:allowUndo="false"
                    android:clickable="false"
                    android:editable="true"
                    android:inputType="text"
                    android:linksClickable="false"
                    android:phoneNumber="false" />

            </LinearLayout>
            <!-- Last Name-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout2" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inLastName"
                    android:id="@+id/inLastName" />

                <EditText
                    android:layout_height="wrap_content"
                    android:id="@+id/lName"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:layout_width="0dp" />
            </LinearLayout>
            <!-- Phone Number-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inPhone"
                    android:id="@+id/inPhone" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/iphone"
                    android:inputType="phone"
                    android:layout_weight="1" />
            </LinearLayout>
            <!-- E-Mail -->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inEmail"
                    android:inputType="textEmailAddress"
                    android:id="@+id/inEMail" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/iemail"
                    android:layout_weight="1"
                    android:inputType="textEmailAddress" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveExit"
            android:id="@+id/exit"
            android:layout_gravity="center_horizontal|bottom" />
    </FrameLayout>
</RelativeLayout>
